[build-system]
requires = ["briefcase"]

[tool.briefcase]
project_name = "Hello BeeWare"
bundle = "com.ri"
version = "0.0.1"
url = "https://ri.com/hellobeeware"
license = "BSD license"
author = 'RI'
author_email = "rami.ibragimov@gmail.com"

[tool.briefcase.app.hellobeeware]
formal_name = "HelloBeeWare"
description = "My first application"
icon = "src/hellobeeware/resources/hellobeeware"
sources = ['src/hellobeeware']
requires = []


[tool.briefcase.app.hellobeeware.macOS]
requires = [
    'toga-cocoa>=0.3.0.dev18',
]

[tool.briefcase.app.hellobeeware.linux]
requires = [
    'toga-gtk>=0.3.0.dev18',
]
system_requires = [
    'libgirepository1.0-dev',
    'libcairo2-dev',
    'libpango1.0-dev',
    'libwebkitgtk-3.0-0',
    'gir1.2-webkit-3.0',
]
[tool.briefcase.app.hellobeeware.windows]
requires = [
    'toga-winforms>=0.3.0.dev18',
]

# Mobile deployments
[tool.briefcase.app.hellobeeware.iOS]
requires = [
    'toga-iOS>=0.3.0.dev18',
]

[tool.briefcase.app.hellobeeware.android]
requires = [
    'toga-android>=0.3.0.dev18',
]
